@@ -1,30 +1,16 @@
 /*
- * Licensed to Elasticsearch under one or more contributor
- * license agreements. See the NOTICE file distributed with
- * this work for additional information regarding copyright
- * ownership. Elasticsearch licenses this file to you under
- * the Apache License, Version 2.0 (the "License"); you may
- * not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *    http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing,
- * software distributed under the License is distributed on an
- * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
- * KIND, either express or implied.  See the License for the
- * specific language governing permissions and limitations
- * under the License.
+ * Copyright Elasticsearch B.V. and/or licensed to Elasticsearch B.V. under one
+ * or more contributor license agreements. Licensed under the Elastic License
+ * 2.0 and the Server Side Public License, v 1; you may not use this file except
+ * in compliance with, at your election, the Elastic License 2.0 or the Server
+ * Side Public License, v 1.
  */
 
 package org.elasticsearch.test.rest.yaml;
 
-import java.util.Arrays;
-import java.util.List;
-
 import org.elasticsearch.test.rest.ESRestTestCase;
 
-import static java.util.Collections.unmodifiableList;
+import java.util.List;
 
 /**
  * Allows to register additional features supported by the tests runner.
@@ -35,7 +21,8 @@ import static java.util.Collections.unmodifiableList;
  * and the related skip sections can be removed from the tests as well.
  */
 public final class Features {
-    private static final List<String> SUPPORTED = unmodifiableList(Arrays.asList(
+
+    private static final List<String> SUPPORTED = List.of(
             "catch_unauthorized",
             "default_shards",
             "embedded_stash_key",
@@ -47,8 +34,9 @@ public final class Features {
             "warnings",
             "yaml",
             "contains",
-            "transform_and_set"
-    ));
+            "transform_and_set",
+            "arbitrary_key",
+            "allowed_warnings");
 
     private Features() {
 
